--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+.formContainer {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.formWrapper {
+  background-color: #fff;
+  padding: 20px 60px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.formWrapper form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  color: #5d5d8d;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.title {
+  color: #5d5d8d;
+  font-size: 12px;
+}
+
+input {
+  padding: 15px;
+  border: none;
+  border-bottom: 1px solid #a7bcff;
+}
+
+input::placeholder {
+  color: rgb(175, 175, 175)
+}
+
+button {
+  background-color: #7b96ec;
+  color: #fff;
+  padding: 10px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+}
+
+p {
+  color: #5d5b8d;
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+.file {
+  display: none;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #8da4f1;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+label img {
+  width: 32px;
+}
+
+.bottom {
+  font-size: 12px;
+  margin-right: 8px;
+}
+
+.link {
+  font-size: 14px;
+  text-decoration: none;
+  color: #7b96ec;
 }
