--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Login & Register */
+
 .formContainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -55,7 +57,7 @@ button {
 p {
   color: #5d5b8d;
   font-size: 12px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .file {
@@ -84,4 +86,115 @@ label img {
   font-size: 14px;
   text-decoration: none;
   color: #7b96ec;
+}
+
+/* Home */
+
+.home {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home .container {
+  border: 1px solid #fff;
+  border-radius: 10px;
+  width: 65%;
+  height: 80%;
+  display: flex;
+  overflow: hidden;
+}
+
+.sidebar {
+  flex: 1;
+  background-color: #3e3c61;
+}
+
+.chat {
+  flex: 2;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  background-color: #2f2d52;
+  height: 50px;
+  padding: 10px;
+  justify-content: space-between;
+  color: #ddddf7;
+}
+
+.navbar .logo {
+  font-weight: bold;
+}
+
+.navbar .user {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.navbar .user img {
+  background-color: #ddddf7;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.navbar .user button {
+  background-color: #5d5b8d;
+  color: #ddddf7;
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.search {
+  border-bottom: 1px solid gray;
+}
+
+.searchForm input {
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  outline: none;
+}
+
+.searchForm input::placeholder {
+  color: lightgray;
+}
+
+.userChat {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color .2s ease;
+}
+
+.userChat:hover {
+  background-color: #2f2d52;
+}
+
+.userChat img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.userChatInfo span {
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.userChatInfo p {
+  font-size: 14px;
+  color: lightgray;
 }
