--- a/src/style.scss
+++ b/src/style.scss
@@ -121,6 +121,7 @@
             color: #ddddf7;
             font-size: 10px;
             border: none;
+            cursor: pointer;
           }
         }
       }
